fixed align-item center to row

--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ main{
 
     .row{
         flex-wrap: wrap;
+        align-items: center;
     }
 
     img{
